--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,14 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pprint = "*"
 
 [packages]
 alembic = "*"
 psycopg2-binary = "*"
 sqlalchemy = "*"
 pygithub = "*"
+atlassian-python-api = "*"
 
 [requires]
 python_version = "3"
